# weather-bot

./: .env  .gitignore  README.md  docker-compose.yml
deployment/: README.md  docker-compose.yml  requirements.txt
deployment/sql/: init.sql
nlp_spacy/: nlp_patterns.py  nlp_service.py
python_bot/: bot.py  commands.py  handlers.py  kafka_service.py  main.py  weather_api.py  weather_hand.py
python_interface/: logger_config.py
python_interface/nlp_spacy/: config.py  entity_extractor.py  nlp_app.py  nlp_patterns.py  nlp_service.py
python_interface/python_bot/: command_handlers.py  commands.py  config.py  handlers.py  kafka_service.py  main.py  message_builder.py  nlp_client.py  nlp_handler.py  nlp_text_handler.py  utils.py
weather_backend/: CMakeLists.txt  DataTransferObjects.h  config.json  main.cc
weather_backend/command_logic/include/: ForecastCommand.h  ICommandLogic.h  MessageLogic.h  StartCommand.h  WeatherCommand.h
weather_backend/command_logic/src/: ForecastCommand.cc  StartCommand.cc  WeatherCommand.cc
weather_backend/controllers/: AlertsController.cc  MessagesConroller.cc  SubscriptionsController.cc  SubscriptionsController.h  Telegram.cc  Telegram.h  UserController.cc  UserController.h  WeatherCacheConroller.cc
weather_backend/controllers/src/: AlertsController.cc  MessagesConroller.cc  MessagesController.cc  SubscriptionsController.cc  Telegram.cc  TelegramController.cc  UserController.cc  WeatherCacheConroller.cc
weather_backend/kafka/include/: KafkaConsumer.h  KafkaResponseSender.h
weather_backend/kafka/src/: KafkaProduce.cc
weather_backend/models/: Alerts.cc  Alerts.h  Messages.cc  Messages.h  Subscriptions.h  Users.cc  WeatherCache.cc  model.json
weather_backend/parsers/include/: ParserTgMessage.h  TelegramUpdateParser.h
weather_backend/parsers/src/: TelegramUpdateParser.cc
weather_backend/services/include/: AppServices.h  DataBaseService.h  KafkaMessageService.h  NotificationService.h  TelegramService.h  WeatherService.h
weather_backend/services/src/: DataBaseService.cc  KafkaMessageService.cc  NotificationService.cc  WeatherService.cc
weather_core/: CMakeLists.txt  DataTransferObjects.h  main.cc
weather_core/command_logic/include/: ICommandLogic.h  MyCityCommand.h
weather_core/command_logic/src/: ForecastCommand.cc  MyCityCommand.cc  StartCommand.cc  WeatherCommand.cc
weather_core/controllers/include/: AlertsController.h  MessagesController.h  PingController.h  TelegramController.h  WeatherCacheController.h
weather_core/controllers/src/: AlertsController.cc  PingController.cc  SubscriptionsController.cc  UserController.cc  WeatherCacheController.cc
weather_core/kafka/include/: KafkaProducer.h
weather_core/kafka/src/: KafkaConsumer.cc  KafkaResponseSender.cc
weather_core/models/: Alerts.cc  Alerts.h  Messages.cc  Messages.h  Subscriptions.cc  Trackings.cc  Trackings.h  Users.cc  Users.h  WeatherCache.h  model.json
weather_core/parsers/include/: OpenWeatherMapParser.h  TelegramUpdateParser.h  WeatherConditionParser.h
weather_core/parsers/src/: OpenWeatherMapParser.cc  TelegramUpdateParser.cc  WeatherConditionParser.cc
weather_core/plugins/: AppServicesPlugin.cc
weather_core/services/include/: AppServices.h  DataBaseService.h  KafkaMessageService.h  NotificationService.h  TelegramService.h  WeatherService.h
weather_core/services/src/: AppServices.cc  DataBaseService.cc  KafkaMessageService.cc  NotificationService.cc  TelegramService.cc
weather_core/test/: CMakeLists.txt
